src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Project Sales Process</fullName>
        <description>EnerSys Project Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Design</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Planning</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
        <values>
            <fullName>Specification Completed</fullName>
        </values>
        <values>
            <fullName>Testing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Repeat Sales Process</fullName>
        <description>EnerSys Repeat Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Sales Process</fullName>
        <description>EnerSys Standard Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Associated_Winning_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you have moved this opportunity to Closed Lost with a reason of &quot;Won with Another Opportunity&quot; please look up the winning opportunity here.  The winning opportunity must be in Closed Won in order for you to select it.</inlineHelpText>
        <label>Associated Winning Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>equals</operation>
                <value>Closed Won</value>
            </filterItems>
            <infoMessage>Only &quot;Closed Won&quot; Opportunities are able to be selected.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Bill To)</relationshipLabel>
        <relationshipName>Opportunities_Bill_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Lost_To__c</fullName>
        <globalPicklist>Competitors</globalPicklist>
        <label>Competitor Lost To</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <globalPicklist>Competitors</globalPicklist>
        <inlineHelpText>Select the competitors also bidding/quoting this opportunity</inlineHelpText>
        <label>Competitor(s)</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <label>Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMEA_SAP_Ready__c</fullName>
        <formula>AND(ISBLANK(&quot;&quot;),ISBLANK( EMEA_SAP_Required_Data_Checklist__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMEA SAP Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMEA_SAP_Required_Data_Checklist__c</fullName>
        <formula>IF(ISBLANK( Account.BillingCity ), &quot;Please add a BillingCity to the Sold To Account; &quot;, &quot;&quot;)
&amp;
IF(ISBLANK( Account.Customer_Language__r.Code__c ), &quot;Please add a Language to the Sold To Account; &quot;, &quot;&quot;)
&amp;
IF(Sales_Area_Data__c==NULL, &quot;Please add Sales Area Data; &quot;, &quot;&quot;)
&amp;
IF(Sales_Area_Data__r.Sales_Area_Sales_Organisation_Code__c==NULL, &quot;Please add a Sales Area on Sales Area Data&quot;, &quot;&quot;)
&amp;
IF (ISBLANK(TEXT(Sales_Area_Data__r.CurrencyIsoCode)), &quot;Please add a Currency on Sales Area Data; &quot;, &quot;&quot;)
&amp;
IF (ISBLANK(Sales_Area_Data__r.Customer_Group_lookup__r.Code__c), &quot;Please add a Customer Group on Sales Area Data; &quot;, &quot;&quot;)
&amp;
IF (ISBLANK(Sales_Area_Data__r.Delivery_Priority__r.Code__c), &quot;Please add a Delivery Priority on Sales Area Data; &quot;, &quot;&quot;)
&amp;
IF (ISBLANK(Sales_Area_Data__r.Incoterm_Code_lookup__r.Code__c), &quot;Please add an Incoterm Code on Sales Area Data; &quot;, &quot;&quot;)
&amp;
IF (ISBLANK(Sales_Area_Data__r.Sales_District__r.Code__c), &quot;Please add a Sales District on Sales Area Data; &quot;, &quot;&quot;)
&amp;
IF (ISBLANK(Sales_Area_Data__r.Sales_Office_lookup__r.Code__c), &quot;Please add a Sales Office on Sales Area Data; &quot;, &quot;&quot;)
&amp;
IF (ISBLANK(Sales_Area_Data__r.Shipping_Conditions__r.Code__c), &quot;Please add a Shipping Conditions on Sales Area Data; &quot;, &quot;&quot;)
&amp;
IF (ISBLANK(Sales_Area_Data__r.Terms_of_Payment_lookup__r.Code__c), &quot;Please add Terms of Payment on Sales Area Data; &quot;, &quot;&quot;)</formula>
        <label>EMEA SAP Required Data Checklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Exec_Pipeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry value will be populated from the Quote when quote is marked as Primary Quote</description>
        <globalPicklist>Industry</globalPicklist>
        <label>Industry</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOB_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LOB - will be populated from the Quote when quote is marked as Primary</description>
        <label>LOB</label>
        <referenceTo>LOB__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Message__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Tag__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Time__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason (Delete)</label>
        <picklist>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget / Lost Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision / Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Possible_Dup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possible Dup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Quote_approved__c</fullName>
        <formula>OR( 
ISPICKVAL( SBQQ__PrimaryQuote__r.SBQQ__Status__c, &quot;Approved&quot;), 
ISPICKVAL( SBQQ__PrimaryQuote__r.SBQQ__Status__c, &quot;Accepted&quot;), 
ISPICKVAL( SBQQ__PrimaryQuote__r.SBQQ__Status__c, &quot;Presented&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Quote approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Project object to associate multiple opportunities to a related Project.</description>
        <inlineHelpText>If this opportunity is part of a larger project, you can lookup the Project and associate this opportunity here.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <description>SBU will be populated from User</description>
        <globalPicklist>SBU</globalPicklist>
        <label>SBU</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Area Code</label>
        <referenceTo>Sales_Area__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Area Data</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5) OR (6 AND 7) OR 8 OR 9)</booleanFilter>
            <filterItems>
                <field>Sales_Area_data__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$User.SBU__c</field>
                <operation>equals</operation>
                <value>MP - EMEA</value>
            </filterItems>
            <filterItems>
                <field>Sales_Area_data__c.Division_Code__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <filterItems>
                <field>$User.SBU__c</field>
                <operation>equals</operation>
                <value>RP - EMEA</value>
            </filterItems>
            <filterItems>
                <field>Sales_Area_data__c.Division_Code__c</field>
                <operation>equals</operation>
                <value>02</value>
            </filterItems>
            <filterItems>
                <field>$User.SBU__c</field>
                <operation>equals</operation>
                <value>EAS - EMEA</value>
            </filterItems>
            <filterItems>
                <field>Sales_Area_data__c.Division_Code__c</field>
                <operation>equals</operation>
                <value>03</value>
            </filterItems>
            <filterItems>
                <field>$User.ProfileId</field>
                <operation>equals</operation>
                <value>00e41000001ASbX</value>
            </filterItems>
            <filterItems>
                <field>$User.ProfileId</field>
                <operation>equals</operation>
                <value>00e41000001m38p</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Area_data__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_Ship_To_SAD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>On the creation of the opportunity, you can only select the Sold To Customer as the ship to. However, after creating the record, you can select any account that is associated with the Sales Area for this opportunity.</inlineHelpText>
        <label>Select Ship To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Sales_Area_Data__c</field>
                <operation>equals</operation>
                <valueField>Sales_Area_data__c.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Sales_Area_Code__c</field>
                <operation>equals</operation>
                <valueField>Sales_Area_data__c.Sales_Area_Sales_Organisation_Code__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Area_data__c</referenceTo>
        <relationshipLabel>Opportunities (Ship To)</relationshipLabel>
        <relationshipName>Opportunities_Ship_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To add a ship to that does not have preexisting relationship to the sold to on a new opportunity, first save the record and then edit this field.</inlineHelpText>
        <label>Ship To Data (DELETE)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Ship_To_Data__c.Sales_Area_Data__r.Sales_Area_Sales_Organisation_Code__c</field>
                <operation>equals</operation>
                <valueField>$Source.Sales_Area_Code__c</valueField>
            </filterItems>
            <filterItems>
                <field>Ship_To_Data__c.Sales_Area_Data__c</field>
                <operation>equals</operation>
                <valueField>$Source.Sales_Area_Data__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ship_To_Data__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <formula>Select_Ship_To_SAD__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Options__c</fullName>
        <description>Site Option value will be populated from the Quote when quote is marked as Primary Quote</description>
        <globalPicklist>Site_Options</globalPicklist>
        <label>Site Options</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <description>Sub-Industry is associated with Industry for RP</description>
        <globalPicklist>Sub_Industry</globalPicklist>
        <label>Sub-Industry</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Technology value will be populated from the Quote when quote is marked as Primary Quote</description>
        <globalPicklist>Technology</globalPicklist>
        <label>Technology</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Win_Loss_Reason__c</fullName>
        <label>Win/Loss Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing Consideration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Delays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won with Another Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Drill_3</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>drill 4</value>
        </filters>
        <label>Drill 3</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <businessProcess>Project Sales Process</businessProcess>
        <description>Project Opportunity</description>
        <label>Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Repeat</fullName>
        <active>true</active>
        <businessProcess>Repeat Sales Process</businessProcess>
        <description>Repeat Opportunity</description>
        <label>Repeat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <businessProcess>Standard Sales Process</businessProcess>
        <description>Standard Opportunity</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Approved_primary_quote</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
 $Profile.Name &lt;&gt; &apos;EnerSys Integration&apos;, 
 $Profile.Name &lt;&gt; &apos;EnerSys System Administrator&apos;,
 IsWon = true ,
 
 NOT(Primary_Quote_approved__c )
)</errorConditionFormula>
        <errorMessage>Your Primary quote must be approved to move this record to WON</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Associated_Winning_Opportunity</fullName>
        <active>true</active>
        <description>This field should only be edited and therefore required if the Win/Loss reason is &quot;Won with Another Opportunity&quot;</description>
        <errorConditionFormula>AND(
NOT(CONTAINS($Profile.Name, &quot;EMEA&quot;)),
NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;)),
NOT(CONTAINS($Profile.Name, &quot;Integration&quot;)), 
OR(
AND(
ISPICKVAL(Win_Loss_Reason__c, &quot;Won with Another Opportunity&quot;), 
ISBLANK(Associated_Winning_Opportunity__c)
),
AND(
NOT(ISPICKVAL(Win_Loss_Reason__c, &quot;Won with Another Opportunity&quot;)),
NOT(ISBLANK(Associated_Winning_Opportunity__c))
)
)
)</errorConditionFormula>
        <errorDisplayField>Associated_Winning_Opportunity__c</errorDisplayField>
        <errorMessage>This field should only be edited and therefore required if the Win/Loss reason is &quot;Won with Another Opportunity&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost_Competitor</fullName>
        <active>true</active>
        <description>Must add the competitor when an opportunity is set to closed/lost</description>
        <errorConditionFormula>AND( ISPICKVAL(StageName, &apos;Closed Lost&apos;), 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
$Profile.Name &lt;&gt; &apos;EnerSys Integration&apos;, 
$Profile.Name &lt;&gt; &apos;EnerSys System Administrator&apos;,
NOT(ISPICKVAL(SBU__c , &apos;EAS&apos;)),
NOT(ISPICKVAL(Win_Loss_Reason__c, &apos;Won with Another Opportunity&apos;)),  
ISBLANK(Competitor_Lost_To__c) )</errorConditionFormula>
        <errorDisplayField>Competitor_Lost_To__c</errorDisplayField>
        <errorMessage>Please select.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Reason</fullName>
        <active>true</active>
        <description>Select a closed lost or won reason</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(StageName, &apos;Closed Won&apos;),
ISPICKVAL(StageName, &apos;Closed Lost&apos;)
), 
ISBLANK(TEXT(Win_Loss_Reason__c)),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
$Profile.Name &lt;&gt; &apos;EnerSys Integration&apos;, 
$Profile.Name &lt;&gt; &apos;EnerSys System Administrator&apos;
)</errorConditionFormula>
        <errorDisplayField>Win_Loss_Reason__c</errorDisplayField>
        <errorMessage>Please select.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Opp_Creation_on_National_Acc</fullName>
        <active>true</active>
        <description>Prevent creation of Opportunities on Accounts flagged as National, excluding some roles and Profiles.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;EnerSys System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;EnerSys Integration&quot;,
$Profile.Name &lt;&gt; &quot;Americas Elevated User&quot;,
ISNEW(),
Account.National__c,
CONTAINS($UserRole.Name,&quot;MP&quot;),
NOT(CONTAINS($UserRole.Name, &quot;Americas&quot;)),
NOT(CONTAINS($UserRole.Name, &quot;EMEA&quot;))
)</errorConditionFormula>
        <errorMessage>You cannot create an Opportunity on a Account flagged as National.</errorMessage>
    </validationRules>
</CustomObject>